--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+
+
 .attribution {
     font-size: 11px;
     text-align: center;
@@ -9,33 +11,72 @@
 
 body {
     background-color: hsl(47, 88%, 63%);
+    font-family: figtree;
+    font-weight: 500,800;
+    
+    
 }
 
 #card{
-    margin-left: 41%;
+    margin-left: 39%;
     margin-top: 10%;
     background-color: white;
     height: 150%;
-    width: 20%;
+    width: 25%;
     border-radius: 3%;
     border-style:solid;
+    border-width: thin;
     box-shadow: 5px 10px;
     padding: 15px;
+     
+  justify-content: center; 
+  align-items: center; 
 
 }
 
 #card_image{
-    width: 97%;
-    padding: 2%;
+    width: 100%;
     border-radius: 10%;
 }
 
-p {
-    font-weight: bold;
+p{
+    font-size: 16px;
 }
 
 .Learning{
     width: 50%;
     padding: 5px;
     background-color: hsl(47, 88%, 63%);
+    font-weight: bold;
+
+}
+
+.p2{
+    font-size: 14px;
+}
+
+h3{
+    color: hsl(0, 0%, 7%);
+    font-size: 23px;
+}
+
+.p4{
+    color: hsl(0, 0%, 42%);
+}
+
+.card2{
+    display: flex;
+ align-items: center; 
+ grid-template-columns: 1fr 1fr;
+ column-gap: 20px;
+}
+
+.dp_img{
+    max-width: 15%;
+  max-height: 15%;
+}
+
+.text{
+    font-size: 15px;
+    font-weight: bold;
 }
